--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-query-devtools": "^5.61.5",
     "@tremor/react": "^3.18.4",
+    "axios": "^1.7.8",
     "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
