--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/themes": "^3.1.6",
     "@remixicon/react": "^4.5.0",
     "@tanstack/react-query": "^5.61.5",
     "@tanstack/react-query-devtools": "^5.61.5",
