--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -45,6 +47,7 @@
     "lint-staged": "^15.2.10",
     "postcss": "^8.4.49",
     "prettier": "^3.4.1",
+    "semantic-release": "^24.2.2",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
   },
