--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint .",
     "prepare": "husky"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/okamuuu/expense-viewer.git"
+  },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@headlessui/tailwindcss": "^0.2.1",
