--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/okamuuu/expense-viewer.git"
+    "url": "git@github.com:okamuuu/expense-viewer.git"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
