--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Run semantic release
         run: npx semantic-release
         env:
+          GITHUB_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
           GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE }}
