chore(ci)!: test

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,12 +2,12 @@ name: Release
 
 on:
   push:
-    branches:
-      - main # Ensure push events to main trigger the release
+    branches: ["main"] # Ensure push events to main trigger the release
 
 jobs:
   release:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' # Only run if the PR was merged into 'main'
 
     permissions:
       contents: write
