--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,7 @@ name: Release
 
 on:
   push:
-    branches:
-      - main # Ensure push events to main trigger the release
+    branches: ["main"] # Ensure push events to main trigger the release
 
 jobs:
   release:
