--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,11 @@
 name: Release
 
 on:
+  workflow_run:
+    workflows: ["check-pr-title"]
+    types:
+      - completed
+
   push:
     branches: ["main"] # Ensure push events to main trigger the release
 
