feat: workflow_run

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,10 @@ name: Release
 on:
   push:
     branches: ["main"] # Ensure push events to main trigger the release
+  workflow_run:
+    workflows: ["Lint PR"] # 先に実行された PR タイトルチェックのワークフロー名
+    types:
+      - completed
 
 jobs:
   release:
